--- a/sweep.yaml
+++ b/sweep.yaml
@@ -1,7 +1,21 @@
-# Sweep AI turns bugs & feature requests into code changes (https://sweep.dev)
-# For details on our config file, check out our docs at https://docs.sweep.dev/usage/config
+gha_enabled: True
+branch: main
+blocked_dirs: ["/src/app/agent_env"]
+draft: False
+description: >
+"github.com/MOONLAPSED/cognosis is an evolving operating system designed for Linux that focuses on learning from the user and as the user learns. While it has various advanced features and ideas, its core function revolves around organizing and storing data. The system architecture is critical, considering that the entire systems state is a variable due to a computing problem called the Halting Problem. The goal is to create an environment where the user, or agent, believes they have access to the actual system state, although in reality, they are operating within an abstracted layer. This involves defining triggers for intervention, establishing communication between different layers, and setting up protocols to handle such interventions effectively. The primary challenge lies in creating an algorithm that deals with the Halting Problem, ensuring that the AIs cognitive processes function seamlessly without encountering fundamental obstacles that limit information processing. Ultimately, the design aims to maintain a system where the user feels in control while navigating within a carefully orchestrated environment, even though the actual control might be more collaborative between the user and the systems underlying architecture.""
 
-# This setting contains a list of rules that Sweep will check for. If any of these rules are broken in a new commit, Sweep will create an pull request to fix the broken rule.
+docs:
+   - Modal: https://modal.com/docs/reference
+   - PyGitHub: https://pygithub.readthedocs.io/en/latest/
+
+sandbox:
+  install:
+    - trunk init
+  check:
+    - trunk fmt {file_path}
+    - trunk check --fix {file_path}
+
 rules:
   - "All docstrings and comments should be up to date for the hypothetical agent's understanding."
   - "Add docstrings to all functions and file headers for the hypothetical agent's interpretation."
@@ -26,38 +40,6 @@ rules:
   - "Consider offloading as much computational behavior as possible to the KKernel_ (real-time kernel), to substantially enhance performance for the hypothetical agent."
   - "Anything which can exist outside of the heavily-taxed hyper/cognitive kernel should. Or, in other words: minimize computational strain by relocating operations outside the resource-intensive hyper/cognitive kernel whenever feasible."
 
-# This is the branch that Sweep will develop from and make pull requests to. Most people use 'main' or 'master' but some users also use 'dev' or 'staging'.
-branch: 'main'
-
-# By default Sweep will read the logs and outputs from your existing Github Actions. To disable this, set this to false.
-gha_enabled: True
-
-# This is the description of your project. It will be used by sweep when creating PRs. You can tell Sweep what's unique about your project, what frameworks you use, or anything else you want.
-#
-# Example:
-#
-# description: sweepai/sweep is a python project. The main api endpoints are in sweepai/api.py. Write code that adheres to PEP8.
-description: >
-Cognosis is an operating system designed for Linux that focuses on learning from user feedback. While it has various advanced features and ideas, its core function revolves around organizing and storing data. The system architecture is critical, considering that the entire system's state is a variable due to a computing problem called the Halting Problem.
-
-The goal is to create an environment where the user, or 'agent,' believes they have access to the actual system state, although in reality, they are operating within an abstracted layer. This involves defining triggers for intervention, establishing communication between different layers, and setting up protocols to handle such interventions effectively.
-
-The primary challenge lies in creating an algorithm that deals with the Halting Problem, ensuring that the AI's cognitive processes function seamlessly without encountering fundamental obstacles that limit information processing.
-
-Ultimately, the design aims to maintain a system where the user feels in control while navigating within a carefully orchestrated environment, even though the actual control might be more collaborative between the user and the system's underlying architecture.
-
-# This sets whether to create pull requests as drafts. If this is set to True, then all pull requests will be created as drafts and GitHub Actions will not be triggered.
-draft: False
-
-# This is a list of directories that Sweep will not be able to edit.
-blocked_dirs: ["/src/app/agent_env/"]
-
-# This is a list of documentation links that Sweep will use to help it understand your code. You can add links to documentation for any packages you use here.
-#
-# Example:
-#
-# docs:
-#   - PyGitHub: ["https://pygithub.readthedocs.io/en/latest/", "We use pygithub to interact with the GitHub API"]
 docs: []
    - PyGitHub: https://pygithub.readthedocs.io/en/latest/
    - Linux_kernel: https://www.kernel.org/doc/html/latest/index.html
@@ -74,14 +56,6 @@ docs: []
    - LMOps_repo: https://github.com/microsoft/lmops
    - minilm: https://mohitmayank.com/a_lazy_data_science_guide/natural_language_processing/minilm/
    - Transformers: https://huggingface.co/docs/transformers/main_classes/model
-   
-# Sandbox executes commands in a sandboxed environment to validate code changes after every edit to guarantee pristine code. For more details, see the [Sandbox](./sandbox) page.
-sandbox:
-  install:
-    - trunk init
-  check:
-    - trunk fmt {file_path} || return 0
-    - trunk check --fix --print-failures {file_path}
 
 Research_targets:
   - "What abstraction exists (at the kernel-level of a linux os) which may allow us to break the Halting Problem for an affiliated agent but not quantum irreducibility and/or thermodynamics or entropy?"
