--- a/.github/ISSUE_TEMPLATE/sweep-template.yml
+++ b/.github/ISSUE_TEMPLATE/sweep-template.yml
@@ -13,3 +13,4 @@ body:
         Bugs: The bug might be in <FILE>. Here are the logs: ...
         Features: the new endpoint should use the ... class from <FILE> because it contains ... logic.
         Refactors: We are migrating this function to ... version because ...
+        Focus on working, varifyable, and testable code and do not afford too much thought to things you don't understand or, more-likley, which don't actually make sense. You are working with another Jr. dev that likes to write plain english placeholders for code. You can assume something unfamilliar is a placeholder and/or is out of scope, at any-time, and at your-own discretion.
