--- a/sweep.yml
+++ b/sweep.yml
@@ -3,7 +3,7 @@ branch: main
 blocked_dirs: ["/src/app/agent_env"]
 draft: False
 description: >
-"github.com/MOONLAPSED/cognosis is an evolving operating system designed for Linux that focuses on learning from the user and as the user learns. While it has various advanced features and ideas, its core function revolves around organizing and storing data. The system architecture is critical, considering that the entire systems state is a variable due to a computing problem called the Halting Problem. The goal is to create an environment where the user, or agent, believes they have access to the actual system state, although in reality, they are operating within an abstracted layer. This involves defining triggers for intervention, establishing communication between different layers, and setting up protocols to handle such interventions effectively. The primary challenge lies in creating an algorithm that deals with the Halting Problem, ensuring that the AIs cognitive processes function seamlessly without encountering fundamental obstacles that limit information processing. Ultimately, the design aims to maintain a system where the user feels in control while navigating within a carefully orchestrated environment, even though the actual control might be more collaborative between the user and the systems underlying architecture.""
+'github.com/MOONLAPSED/cognosis is an evolving operating system designed for Linux that focuses on learning from the user and as the user learns. While it has various advanced features and ideas, its core function revolves around organizing and storing data. The system architecture is critical, considering that the entire systems state is a variable due to a computing problem called the Halting Problem. The goal is to create an environment where the user, or agent, believes they have access to the actual system state, although in reality, they are operating within an abstracted layer. This involves defining triggers for intervention, establishing communication between different layers, and setting up protocols to handle such interventions effectively. The primary challenge lies in creating an algorithm that deals with the Halting Problem, ensuring that the AIs cognitive processes function seamlessly without encountering fundamental obstacles that limit information processing. Ultimately, the design aims to maintain a system where the user feels in control while navigating within a carefully orchestrated environment, even though the actual control might be more collaborative between the user and the systems underlying architecture.'
 
 docs:
    - Modal: https://modal.com/docs/reference
@@ -40,7 +40,7 @@ rules:
   - "Consider offloading as much computational behavior as possible to the KKernel_ (real-time kernel), to substantially enhance performance for the hypothetical agent."
   - "Anything which can exist outside of the heavily-taxed hyper/cognitive kernel should. Or, in other words: minimize computational strain by relocating operations outside the resource-intensive hyper/cognitive kernel whenever feasible."
 
-docs: []
+docs:
    - PyGitHub: https://pygithub.readthedocs.io/en/latest/
    - Linux_kernel: https://www.kernel.org/doc/html/latest/index.html
    - ELF_files: https://flint.cs.yale.edu/cs422/doc/ELF_Format.pdf
@@ -56,10 +56,9 @@ docs: []
    - LMOps_repo: https://github.com/microsoft/lmops
    - minilm: https://mohitmayank.com/a_lazy_data_science_guide/natural_language_processing/minilm/
    - Transformers: https://huggingface.co/docs/transformers/main_classes/model
-
 Research_targets:
   - "What abstraction exists (at the kernel-level of a linux os) which may allow us to break the Halting Problem for an affiliated agent but not quantum irreducibility and/or thermodynamics or entropy?"
   - "Draft an algorithm in the control theory-sense of the term that doesn't violate universal constants but does trick the Halting Problem - an axiomatic algorithm for our runtime agent. An abstraction from the hardware such that we can avoid the halting situation?"
-  - "Optimization through Parallel Computing:" : "Objective: Investigate and implement techniques involving Single Instruction, Multiple Data (SIMD), parallel processing, Message Passing Interface (MPI), threading, and optimizing code for efficient utilization of CPU cores."
-  - For example: SIMD, (gnu) parallel, mpi, threads/cores/processes, and systemd.
+  - "Optimization through Parallel Computing: Investigate and implement techniques involving Single Instruction, Multiple Data (SIMD), parallel processing, Message Passing Interface (MPI), threading, and optimizing code for efficient utilization of CPU cores."
+  - "For example: SIMD, (gnu) parallel, mpi, threads, and systemd."
   - "Study the available docs! They are all about different but pertinent software that has been there and done that!"
