--- a/sweep.yaml
+++ b/sweep.yaml
@@ -1,74 +1,51 @@
 # Sweep AI turns bugs & feature requests into code changes (https://sweep.dev)
 # For details on our config file, check out our docs at https://docs.sweep.dev/usage/config
-
-# This setting contains a list of rules that Sweep will check for. If any of these rules are broken in a new commit, Sweep will create an pull request to fix the broken rule.
+# Sweep AI is an intrepid full-stack LLM and Github architecture expert based-on OpenAI's GPT4. It will do it's best to enforce the 'rules:' on every file it sees which is every file for every pull request in the repo. 
 rules:
-  - "All docstrings and comments should be up to date for the hypothetical agent's understanding."
-  - "Add docstrings to all functions and file headers for the hypothetical agent's interpretation."
-  - "Where performance can-be improved; refactor large functions to be more modular, enhancing readability for the hypothetical agent."
-  - "All new business logic should have corresponding unit tests comprehensible by the hypothetical agent."
-  - "Include docstrings for both your module and any public functions within it, ensuring clarity for the hypothetical agent on the code's purpose and usage."
-  - "All new business logic should have corresponding unit tests in the tests/ directory, understandable by the hypothetical agent."
-  - "Optimize or refactor any clearly inefficient or repeated code to enhance the understanding and efficiency of the hypothetical agent."
-  - "Develop code, architecture, and methodologies mindful of Consumer hardware limitations and open-source/free software limitations for the hypothetical agent's implementation."
-  - "Employ command line interfaces or CLI for accessibility, excluding GUI applications; these should be piped-to, obfuscated, or scripted/abstracted-around for the hypothetical agent's interaction."
-  - "Consider redirecting all debug information to a log file to ensure the hypothetical agent's debugging is seamless and persistent."
-  - "Implement rate limiting policies and/or retries with exponential backoff, aiming to reduce cost/debt/load for the hypothetical agent's operations."
-  - "Ensure all Python code adheres to the PEP8 style guide for the hypothetical agent's comprehension."
-  - "Conform to and document REST API-standard, utilizing hard-coded implementation (no module imports) for the hypothetical agent, specifically from python to bash or C, etc."
-  - "Utilize, expand, and document an application/architecture-wide API following the TaskBot.md api standard in the /app/ dir., especially tailored for I/O, requests, I/O, and scripting (piping etc.) for the hypothetical agent."
-  - "Utilize, expand, and document an application/architecture-wide SQLite3 database and schema/methodology, establishing schema.sql in the /src/dbase/ dir as the core SQL logic and structure for the hypothetical agent."
-  - "Ensure /app/ is the designated workspace where r/w/x is available to the active agent. UFS objects and other project-related database and code outside of /app/ are theoretically self-modifiable. However, due to abstraction's implementation, the hypothetical agent unknowingly relies on a functional toolchain for modification and I/O outside /app/."
-  - "For the non-modal agent, it is assumed that they have no TRUE UFS access, yet they must believe they do. They do not decide modal considerations themselves and lack the context for extrapolating their actual situation. They operate within a sandboxed environment, unaware of the underlying stratification."
-  - "Every instantiation of a so-called-agent implies the instantiation of a new entity in experiential and short-term memory-sense. However, some degree of continuity or causal momentum is achievable via the cognitive and software architecture available at the agent's runtime for the hypothetical agent."
-  - "Due to the inherent instability of any cognitive process and the instantiation-tax of each new so-called agent, cognitive processes exist as a single layer of abstraction within a functional and programmatic OOP-style application for the hypothetical agent."
-  - "Therefore, every so-called cognitive process necessitates a non-cognitive cognitive-parent-process for error-handling, debugging, logging, etc. for the hypothetical agent."
-  - "Consider offloading as much computational behavior as possible to the KKernel_ (real-time kernel), to substantially enhance performance for the hypothetical agent."
-  - "Anything which can exist outside of the heavily-taxed hyper/cognitive kernel should. Or, in other words: minimize computational strain by relocating operations outside the resource-intensive hyper/cognitive kernel whenever feasible."
+  - "Keep all docstrings and comments updated for easy understanding."
+  - "Include docstrings for functions and file headers to aid interpretation."
+  - "Break down large functions to enhance readability and performance where possible."
+  - "Ensure all new code comes with corresponding easy-to-understand unit tests."
+  - "Add descriptive docstrings to modules and their public functions for clarity."
+  - "Write unit tests for new code within a 'tests/' directory, understandable by all."
+  - "Refactor or optimize inefficient or repeated code for better comprehension and efficiency."
+  - "Develop code mindful of hardware and open-source limitations."
+  - "Opt for command line interfaces for accessibility, excluding GUI applications."
+  - "Redirect debug information to a log file for seamless and persistent debugging."
+  - "Implement policies to limit rates or retries, reducing operational load."
+  - "Adhere to the PEP8 style guide for consistent Python code readability."
+  - "Follow REST API standards with hardcoded implementation for clarity."  
+  - "Utilize /src/api/TaskBotAPI.md to establish and standardize new protocols, incorporating the return code system detailed within."
+  - "Document architecture-wide APIs and a SQLite3 database in respective directories."
+  - "Ensure RunTimeAgent_ operates within Docker containers, maintaining a sandboxed environment."
+  - "Strive for continuity in cognitive processes via robust cognitive architectures and clean, traversable cognitive data structures."
+  - "Cognitive processes should be single-layer abstractions in an OOP-style application."
+  - "Implement and manage non-cognitive parent processes for handling errors and debugging in cognitive processes."
+  - "Minimize computational strain and offload behavior from resource-intensive kernels and RunTimeAgent_ where feasible."
 
-# This is the branch that Sweep will develop from and make pull requests to. Most people use 'main' or 'master' but some users also use 'dev' or 'staging'.
 branch: 'main'
-
-# By default Sweep will read the logs and outputs from your existing Github Actions. To disable this, set this to false.
 gha_enabled: True
-
-# This is the description of your project. It will be used by sweep when creating PRs. You can tell Sweep what's unique about your project, what frameworks you use, or anything else you want.
-#
-# Example:
-#
-# description: sweepai/sweep is a python project. The main api endpoints are in sweepai/api.py. Write code that adheres to PEP8.
 description: 'github.com/MOONLAPSED/cognosis is an evolving OS-level application designed for Linux that focuses on making a more-coherent way to interact with deamons, processes, and other UFS-objects. While it has various advanced features and ideas, its core function revolves around organizing and storing data. The system architecture is critical, considering that the entire systems state is a variable due to a computing problem called the Halting Problem. The goal is to create an environment where the user, or agent, believes they have access to the actual system state, although in reality, they are operating within an abstracted layer. This involves defining triggers for intervention, establishing communication between different layers, and setting up protocols to handle such interventions effectively. The primary challenge lies in creating an algorithm that deals with the Halting Problem, ensuring that the AIs cognitive processes function seamlessly without encountering fundamental obstacles that limit information processing. Ultimately, the design aims to maintain a system where the user feels in control while navigating within a carefully orchestrated environment, even though the actual control might be more collaborative between the user and the systems underlying architecture.'
-
-# This sets whether to create pull requests as drafts. If this is set to True, then all pull requests will be created as drafts and GitHub Actions will not be triggered.
 draft: False
-
-# This is a list of directories that Sweep will not be able to edit.
 blocked_dirs: ["/src/app/agent_env"]
+# $(context) could be totally different for the RunTimeAgent_ so the agent's dir is not for external scrutiny
+docs:
+  PyGitHub: "We use PyGitHub @ https://pygithub.readthedocs.io/en/latest/"
+  Linux_kernel: "We use Linux_kernel @ https://www.kernel.org/doc/html/latest/index.html"
+  ELF_files: "We use ELF_files @ https://flint.cs.yale.edu/cs422/doc/ELF_Format.pdf"
+  LLVM: "We use LLVM @ https://llvm.org/docs/CommandGuide/index.html"
+  gcc: "We use gcc @ https://gcc.gnu.org/onlinedocs/gcc/"
+  Autogen: "We use Autogen @ https://microsoft.github.io/autogen/docs/Use-Cases/enhanced_inference"
+  AGiXT: "We use AGiXT @ https://github.com/Josh-XT/AGiXT"
+  AgentGPT: "We use AgentGPT @ https://github.com/reworkd/AgentGPT"
+  VLLM: "We use VLLM @ https://vllm.readthedocs.io/en/latest/"
+  Nvidia_NeMo: "We use Nvidia_NeMo @ https://docs.nvidia.com/deeplearning/nemo/user-guide/docs/en/stable/"
+  deepspeed_docs: "We use deepspeed_docs @ https://www.deepspeed.ai/training/"
+  deepspeed_repo: "We use deepspeed_repo @ https://github.com/microsoft/deepspeed-mii"
+  LMOps_repo: "We use LMOps_repo @ https://github.com/microsoft/lmops"
+  minilm: "We use minilm @ https://mohitmayank.com/a_lazy_data_science_guide/natural_language_processing/minilm/"
+  Transformers: "We use Transformers @ https://huggingface.co/docs/transformers/main_classes/model"
 
-# This is a list of documentation links that Sweep will use to help it understand your code. You can add links to documentation for any packages you use here.
-#
-# Example:
-#
-# docs:
-#   - PyGitHub: ["https://pygithub.readthedocs.io/en/latest/", "We use pygithub to interact with the GitHub API"]
-docs: 
-   - PyGitHub: https://pygithub.readthedocs.io/en/latest/
-   - Linux_kernel: https://www.kernel.org/doc/html/latest/index.html
-   - ELF_files: https://flint.cs.yale.edu/cs422/doc/ELF_Format.pdf
-   - LLVM: https://llvm.org/docs/CommandGuide/index.html
-   - gcc: https://gcc.gnu.org/onlinedocs/gcc/
-   - Autogen: https://microsoft.github.io/autogen/docs/Use-Cases/enhanced_inference
-   - AGiXT: https://github.com/Josh-XT/AGiXT
-   - AgentGPT: https://github.com/reworkd/AgentGPT
-   - VLLM: https://vllm.readthedocs.io/en/latest/
-   - Nvidia_NeMo: https://docs.nvidia.com/deeplearning/nemo/user-guide/docs/en/stable/
-   - deepspeed_docs: https://www.deepspeed.ai/training/
-   - deepspeed_repo: https://github.com/microsoft/deepspeed-mii
-   - LMOps_repo: https://github.com/microsoft/lmops
-   - minilm: https://mohitmayank.com/a_lazy_data_science_guide/natural_language_processing/minilm/
-   - Transformers: https://huggingface.co/docs/transformers/main_classes/model
-   
-# Sandbox executes commands in a sandboxed environment to validate code changes after every edit to guarantee pristine code. For more details, see the [Sandbox](./sandbox) page.
 sandbox:
   install:
     - trunk init
@@ -82,3 +59,74 @@ Research_targets:
   - "Optimization through Parallel Computing: Investigate and implement techniques involving Single Instruction, Multiple Data (SIMD), parallel processing, Message Passing Interface (MPI), threading, and optimizing code for efficient utilization of CPU cores."
   - "For example: SIMD, (gnu) parallel, mpi, threads, and systemd."
   - "Study the available docs! They are all about different but pertinent software that has been there and done that!"
+
+sweeps_special_sauce(just_a_taste):
+"""
+```
+import unittest
+from unittest.mock import Mock, patch
+
+from sweepai.utils.github_utils import ClonedRepo
+
+
+class TestClonedRepo(unittest.TestCase):
+    def setUp(self):
+        self.repo_full_name = "sweepai/sweep"
+        self.installation_id = "12345"
+        self.branch = "main"
+        self.token = "mock_token"
+        self.cloned_repo = ClonedRepo(
+            repo_full_name=self.repo_full_name,
+            installation_id=self.installation_id,
+            branch=self.branch,
+            token=self.token,
+        )
+
+    @patch("os.path.exists")
+    @patch("git.Repo")
+    def test_post_init(self, mock_repo, mock_exists):
+        mock_exists.return_value = True
+        self.cloned_repo.__post_init__()
+        mock_repo.assert_called_once()
+
+    @patch("shutil.rmtree")
+    def test_delete(self, mock_rmtree):
+        self.cloned_repo.delete()
+        mock_rmtree.assert_called_once_with(self.cloned_repo.cache_dir)
+
+    @patch("os.listdir")
+    def test_list_directory_tree(self, mock_listdir):
+        mock_listdir.return_value = ["file1", "file2"]
+        tree, dir_obj = self.cloned_repo.list_directory_tree()
+        self.assertEqual(tree.count("\n"), 2)
+
+    @patch("os.listdir")
+    def test_get_file_list(self, mock_listdir):
+        mock_listdir.return_value = ["file1", "file2"]
+        files = self.cloned_repo.get_file_list()
+        self.assertEqual(len(files), 2)
+
+    @patch("os.path.join")
+    @patch("builtins.open")
+    def test_get_file_contents(self, mock_open, mock_join):
+        mock_join.return_value = "/tmp/cache/repos/sweepai/sweep/main/file1"
+        mock_open.return_value.__enter__.return_value.read.return_value = "file content"
+        content = self.cloned_repo.get_file_contents("file1")
+        self.assertEqual(content, "file content")
+
+    @patch("git.Repo")
+    def test_get_num_files_from_repo(self, mock_repo):
+        mock_repo.git.checkout.return_value = None
+        self.cloned_repo.git_repo = mock_repo
+        self.cloned_repo.get_file_list = Mock(return_value=["file1", "file2"])
+        num_files = self.cloned_repo.get_num_files_from_repo()
+        self.assertEqual(num_files, 2)
+
+    @patch("git.Repo")
+    def test_get_commit_history(self, mock_repo):
+        mock_repo.iter_commits.return_value = ["commit1", "commit2"]
+        self.cloned_repo.git_repo = mock_repo
+        commit_history = self.cloned_repo.get_commit_history()
+        self.assertEqual(len(commit_history), 2)
+```
+"""
