--- a/sweep.yaml
+++ b/sweep.yaml
@@ -26,8 +26,7 @@ branch: 'main'
 gha_enabled: True
 description: 'github.com/MOONLAPSED/cognosis is an evolving OS-level application designed for Linux that focuses on making a more-coherent way to interact with deamons, processes, and other UFS-objects. While it has various advanced features and ideas, its core function revolves around organizing and storing data. The system architecture is critical, considering that the entire systems state is a variable due to a computing problem called the Halting Problem. The goal is to create an environment where the user, or agent, believes they have access to the actual system state, although in reality, they are operating within an abstracted layer. This involves defining triggers for intervention, establishing communication between different layers, and setting up protocols to handle such interventions effectively. The primary challenge lies in creating an algorithm that deals with the Halting Problem, ensuring that the AIs cognitive processes function seamlessly without encountering fundamental obstacles that limit information processing. Ultimately, the design aims to maintain a system where the user feels in control while navigating within a carefully orchestrated environment, even though the actual control might be more collaborative between the user and the systems underlying architecture.'
 draft: False
-blocked_dirs: "/src/app/agent_env"
-# $(context) could be totally different for the RunTimeAgent_ so the agent's dir is not for external scrutiny
+blocked_dirs: "/logs/"
 docs:
   PyGitHub: "We use PyGitHub @ https://pygithub.readthedocs.io/en/latest/"
   Linux_kernel: "We use Linux_kernel @ https://www.kernel.org/doc/html/latest/index.html"
@@ -44,6 +43,8 @@ docs:
   LMOps_repo: "We use LMOps_repo @ https://github.com/microsoft/lmops"
   minilm: "We use minilm @ https://mohitmayank.com/a_lazy_data_science_guide/natural_language_processing/minilm/"
   Transformers: "We use Transformers @ https://huggingface.co/docs/transformers/main_classes/model"
+  STOMP_protocol: "We use STOMP protocol @ https://stomp.github.io/stomp-specification-1.2.html"
+  Backus_Naur_form: "We use augmented BNF packets from RFC2616 @ https://datatracker.ietf.org/doc/html/rfc2616#section-2.1"
 
 sandbox:
   install:
