--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Run tests in CUDA Docker container
         run: |
-          docker run --rm --gpus all
+          docker run --rm --gpus all myimage:latest
             -v ${{ env.LOGS_DIR }}:/app/logs
             myimage:latest
             bash -c "cd /app && python main.py 2>&1 | tee /app/logs/python-app.log"
