--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,6 +14,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Pull Docker image
+        run: |
+          docker pull ghcr.io/ai-dock/jupyter-pytorch:2.1.0-py3.9-cuda-12.1.0-cudnn8-devel-22.04
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -37,7 +41,6 @@ jobs:
         run: |
           docker run --rm --gpus all cognosis:latest
             -v ${{ env.LOGS_DIR }}:/app/logs
-            cognosis:latest
             bash -c "cd /app && python main.py 2>&1 | tee /app/logs/python-app.log"
 
       - name: Append new log entries to existing logs
