--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.scratch
-/scratch/
-/logs/
-*.vs
+/.scratch/
 /apps/
-/src/app/agent_env/
+/logs/
+*.logs
+*.env
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -67,7 +67,6 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-*.db
 
 # Flask stuff:
 instance/
@@ -151,6 +150,9 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
+# ruff
+.ruff_cache/
+
 # Pyre type checker
 .pyre/
 
@@ -159,3 +161,17 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# PyCharm
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+#  and can be added to the global gitignore or merged into this file.  For a more nuclear
+#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+#.idea/
+
+# FastStream-gen
+asyncapi.yaml
+asyncapi.json
+asyncapi_docs
+faststream-log.txt
+**/rabbitmqadmin
