dunder ele-->cognosis rebase march 2024

--- a/environment.yml
+++ b/environment.yml
@@ -1,22 +1,18 @@
-#! bin/python3/ ... /cognosis/main.py ... /cognosis/requirements.txt ... / ... /cognosis/setup.py
+#! bin/python3/env
 name: jupyterjax
 channels:
 - conda-forge
-- defaults
-- nvidia/label/cuda-11.8.0
 dependencies:
-- python=3.10
+- python=3.11
 - jax
 - numpy
-- pandas
 - xonsh
 - ipykernel
 - jupyterlab
-- cudatoolkit=11.8
-- openai
-
+- cudatoolkit
+- pip:
+  - -r file:requirements.txt
 env:
-DATABASE_URL: sqlite:///db.sqlite3
 ENV_DICT: []
 ENV_KEYS: []
 ENV_VALUES: []
@@ -26,5 +22,7 @@ ENV_workerid: ""
 ENV_task_status: ""
 ENV_taskid: ""
 ENV_credentials: []
-ENV_embeddings: ""  # type: BLOB
-ENV_entbeddings: ""  # type: BLOB
+ENV_launch_type: "init"
+ENV_launch_directive: "debug"
+ENV_launch_file: "src/launch.py"
+ENV_launch_args: ''
