--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-numpy
 pandas
 requests
-openai
-ipykernel
-jupyterlab
-websockets
-asyncio
 typer
 litellm
+pydantic
+python-dotenv
+httpx
+instructor
+spacy
+errbot
+tiktoken
+open-interpreter
