clicbranch candidate commit

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ JUPYTER_PYTORCH_REPO_URL=https://github.com/ai-dock/jupyter-pytorch
 JUPYTER_PYTORCH_API_URL=http://localhost:8888/
 JUPYTER_PYTORCH_LAB_URL=http://0.0.0.0:8888/lab # password = password
 ollamaapi=http://localhost:11434/api/generate
+OLLAMA_HOST=11434
 HF_ACCESS_TOKEN=your_huggingface_access_token
 COHEREAI_API_URL=your_cohereai_api_url
 OPENAI_API_KEY=your_openai_api_key
