modified setup routes - pipx+pdm, or mambaforge+micromamba

--- a/.env.example
+++ b/.env.example
@@ -10,14 +10,9 @@ OPENAI_API_KEY=your_openai_api_key
 MERMAID_API=your_mermaid_api_key
 WANDB_API=your_wandb_api_key
 PALMAPI_API_URL=your_palmapi_api_url
-D_LOGGER=console
-I_LOGGER=console
-W_LOGGER=file:app.log
-E_LOGGER=file:errors.log
-C_LOGGER=file:errorslog #, http:https://api.com/log/critical
 launch_type="debug"
 launch_directive="debug"
-launch_file="src/launch.py"
+launch_file="/main.py"
 launch_args=''
 # state = 0 means no stop-signal, loop or kernel panic
 STATE=0
