--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+requires = ["pdm-pep517"]
+build-backend = "pdm.pep517.api"
 
 [project]
 name = "cognosis"
 description = "cognosis -- namespace and filesystem interface; obsidian kb"
 authors = [{ name = "MOONLAPSED", email = "MOONLAPSED@gmail.com" }]
 version = "0.1.0"
-requires-python = ">= 3.11"
+requires-python = ">=3.11"
 
 [project.readme]
 file = "README.md"
@@ -34,6 +34,9 @@ pydantic = "*"
 pytest = "*"
 httpx = "*"
 docker = "*"
+requests = "*"
+python-dotenv = "*"
+spacy = "*"
 
 [build-system.backends.go]
 name = "go"
@@ -41,7 +44,14 @@ requires = ["go>=1.16"]
 
 [build-system.backends.npm]
 name = "npm"
-requires = ["npm>10.4.0"]
+requires = ["npm>=10.4.0"]
+
+[build-system.backends.pdm]
+requires = ["pdm-pep517"]
+build-backend = "pdm.pep517.api"
+
+[build-system.backends.Rust]
+requires = ["rust>=1.0"]
 
 [project.scripts]
 main = "main.py:main"
