--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-JUPYTER_PYTORCH_DOCKER_IMAGE=ghcr.io/ai-dock/jupyter-pytorch:2.1.0-py3.11-cuda-11.8.0-cudnn8-devel-22.04
+JUPYTER_PYTORCH_DOCKER_IMAGE=ghcr.io/ai-dock/jupyter-pytorch::2.2.1-py3.12-cuda-12.1.0-base-22.04
 JUPYTER_PYTORCH_REPO_URL=https://github.com/ai-dock/jupyter-pytorch
 JUPYTER_PYTORCH_API_URL=http://localhost:8888/
 JUPYTER_PYTORCH_LAB_URL=http://0.0.0.0:8888/lab # password = password
