mike jina hyde larry moe and curly

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ JUPYTER_PYTORCH_API_URL=http://localhost:8888/
 JUPYTER_PYTORCH_LAB_URL=http://0.0.0.0:8888/lab # password = password
 ollamaapi=http://localhost:11434/api/generate
 OLLAMA_HOST=11434
+JEKYLL_HOST=4000
+JEKYLL_URl=http://localhost:4000
 HF_ACCESS_TOKEN=your_huggingface_access_token
 COHEREAI_API_URL=your_cohereai_api_url
 OPENAI_API_KEY=your_openai_api_key
