lmstudio .env update - no install script

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ JUPYTER_PYTORCH_API_URL=http://localhost:8888/
 JUPYTER_PYTORCH_LAB_URL=http://0.0.0.0:8888/lab # password = password
 ollamaapi=http://localhost:11434/api/generate
 OLLAMA_HOST=11434
+client=OpenAI(base_url="http://localhost:1234/v1", api_key="lm-studio")
 JEKYLL_HOST=4000
 JEKYLL_URl=http://localhost:4000
 HF_ACCESS_TOKEN=your_huggingface_access_token
