stdlib cli candidate

--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -36,12 +36,11 @@ jobs:
 
       - name: Create and activate Python virtual environment
         run: |
-          python -m venv venv
-          source venv/bin/activate
-          echo $PATH | tee -a logs/setup.log 2>&1
-          echo $VIRTUAL_ENV | tee -a logs/setup.log 2>&1
-          echo $PYTHONPATH | tee -a logs/setup.log 2>&1
-          echo "__ele__.main()" tee -a logs/setup.log 2>&1
+            python -m venv venv
+            bash -c "source venv/bin/activate"
+            echo $PATH | tee -a logs/setup.log 2>&1
+            echo $VIRTUAL_ENV | tee -a logs/setup.log 2>&1
+            echo $PYTHONPATH | tee -a logs/setup.log 2>&1
       - name: Install dependencies and set up environment
         run: | 
             sudo apt-get update
