reqs and sandbox tweak

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pandas
-requests
-litellm
 pydantic
 python-dotenv
 httpx
-spacy
 python-frontmatter
 pyYAML
+matplotlib[notebook]
+numpy
+ipywidgets
+jupyterlab
+ipykernel
