--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,49 +7,90 @@ name = "cognosis"
 description = "A namespace and filesystem interface for Obsidian knowledge bases."
 authors = [{ name = "MOONLAPSED", email = "MOONLAPSED@gmail.com" }]
 requires-python = ">=3.11"
-readme = "README.md"
-dynamic = ["version"]
+version = "0.1.69"
 
-# Consolidated dependencies including those from requirements.txt
-dependencies = [
-    "jax",
-    "jupyter",
-    "jupyterlab",
-    "ipykernel",
-    "ipywidgets",
-    "numpy",
-    "pandas",
-    "matplotlib",
-    "typing-extensions",
-    "xonsh",
-    "litellm",
+[project.readme]
+file = "README.md"
+content-type = "text/markdown"
+
+# Moved dev dependencies to [tool.pdm.dev-dependencies]
+[tool.pdm.dev-dependencies]
+test = [
     "pytest",
-    "httpx",
-    "docker",
-    "requests",
-    "python-dotenv",
-    "spacy",
-    "python-frontmatter",
-    "pyYAML",
-    "mkdocs"
+    "pytest-cov",
+    "pytest-benchmark",
+    "hypothesis",
 ]
+lint = [
+    "flake8",
+    "black",
+    "isort",
+    "mypy",
+]
+dev = [
+    "tox",
+    "pre-commit",
+    "cffi",
+    "cmake",
+    "pdm",
+]
+
+[tool.pdm.conda]
+runner = "micromamba"
+channels = ["conda-forge/noarch", "conda-forge", "anaconda"]
+dependencies = ["pdm", "jax", "openai", "pydantic", "aiohttp"]
+as-default-manager = true
+solver = "libmamba"
+excludes = ["pytest-cov"]
+installation-method = "copy"
+batched-commands = true
+
+[tool.pdm.conda.pypi-mapping]
+download-dir = "/tmp"
+url = "https://url/to/mapping.yaml"
+
+[tool.pdm.conda.optional-dependencies]
+extra = [
+    "anaconda:ffmpeg",
+    "anaconda::xonsh",
+    "anaconda::pdm",
+    "anaconda::jupyter",
+    "anaconda::ipykernel",
+    "anaconda::numpy",
+    "anaconda::mypy",
+    "anaconda::ipykernel",
+    "anaconda::xonsh",
+]
+
+[tool.black]
+line-length = 88
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503"]
+
+[tool.mypy]
+python_version = "3.11"
+disallow_untyped_defs = true
+ignore_missing_imports = true
+
+[tool.isort]
+profile = "black"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
 
 [project.scripts]
-main = "main.py:main"
+main = "main:main"
+bench = "src.bench.bench:main"
 
-[tool.pdm.build-system.backends]
-go = { name = "go", requires = ["go>=1.16"] }
-npm = { name = "npm", requires = ["npm>=10.4.0"] }
-pdm = { requires = ["pdm-pep517>=0.8.5"], build-backend = "pdm.pep517.api" }
-rust = { requires = ["rust>=1.0"] }
+# Added scripts section for development tasks
+[tool.pdm.scripts]
+lint = "flake8 ."
+format = { composite = ["black .", "isort ."] }
+typecheck = "mypy ."
+test = "pytest"
 
-# Optional: tools/pdm/scripts for versioning or other tasks, add those here
-
-[project.optional-dependencies]
-dev = [
-    "mkdocs",
-    "mkdocs-material"  # Preferred MkDocs theme or plugins
-]
-
-[tool.setuptools.dynamic]
-version = {attr = "package.__version__"}
+# Custom section for API readme
+[tool.cognosis.api]
+readme = { file = "docs/api/README.md", content-type = "text/markdown" }
