--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "cognosis"
 description = "A namespace and filesystem interface for Obsidian knowledge bases."
 authors = [{ name = "MOONLAPSED", email = "MOONLAPSED@gmail.com" }]
 requires-python = ">=3.11"
-version = "0.1.69"
+version = "0.1.6901"
 
 [project.readme]
 file = "README.md"
@@ -38,7 +38,7 @@ dev = [
 [tool.pdm.conda]
 runner = "micromamba"
 channels = ["conda-forge/noarch", "conda-forge", "anaconda"]
-dependencies = ["pdm", "jax", "openai", "pydantic", "aiohttp"]
+dependencies = ["pdm", "jax"]
 as-default-manager = true
 solver = "libmamba"
 excludes = ["pytest-cov"]
@@ -59,7 +59,6 @@ extra = [
     "anaconda::numpy",
     "anaconda::mypy",
     "anaconda::ipykernel",
-    "anaconda::xonsh",
 ]
 
 [tool.black]
