--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,18 @@ build-backend = "pdm.pep517.api"
 name = "cognosis"
 description = "A namespace and filesystem interface for Obsidian knowledge bases."
 authors = [{ name = "MOONLAPSED", email = "MOONLAPSED@gmail.com" }]
-requires-python = ">=3.11"
-version = "0.1.6901"
+requires-python = ">=3.12"
+version = "0.2.569"
 
 [project.readme]
 file = "README.md"
 content-type = "text/markdown"
 
-# Moved dev dependencies to [tool.pdm.dev-dependencies]
 [tool.pdm.dev-dependencies]
 test = [
     "pytest",
     "pytest-cov",
+    "pytest-asyncio",
     "pytest-benchmark",
     "hypothesis",
 ]
@@ -83,13 +83,8 @@ testpaths = ["tests"]
 main = "main:main"
 cleanup = "src.utils.cleanup:main"
 
-# Added scripts section for development tasks
 [tool.pdm.scripts]
 lint = "flake8 ."
 format = { composite = ["black .", "isort ."] }
 typecheck = "mypy ."
 test = "pytest"
-
-# Custom section for API readme
-[tool.cognosis.api]
-readme = { file = "docs/api/README.md", content-type = "text/markdown" }
