--- a/src/ts/bunfig.toml
+++ b/src/ts/bunfig.toml
@@ -2,5 +2,5 @@
 
 name = "cognos.bun"
 version = "2.0.0"
-server = "server.ts"
-main = "dist/app.ts"
+server = "server.ts" # ADMIN runtime - in parent dir
+main = "dist/app.ts" # USER runtime - in dynamic /dist/
